# Budgie

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark.sh  patterns.txt  runbot.sh  test_playouts.sh
.github/workflows/: cmake.yml
include/budgie/: args_parser.hpp  budgie.hpp  distributed_client.hpp  distributed_mcts.hpp  game.hpp  gtp.hpp  josekiDB.hpp  mcts.hpp  move_queue.hpp  parameters.hpp  pattern_db.hpp  playout_strategies.hpp  serialize.hpp  sgf.hpp  thread_pool.hpp  tree_policies.hpp  ts_forward_list.hpp  utility.hpp
include/mcts-gb/: args_parser.hpp  game.hpp  gtp.hpp  mcts.hpp  pattern_db.hpp
schemas/: Board.capnp  Node.capnp  UpdateTree.capnp
src/: bot-main.cpp  game.cpp  gtp.cpp  josekigen.cpp  local-weighted-playouts.cpp  main.cpp  mcts.cpp  pattern_db.cpp  patterngen.cpp  sdl-main.cpp  uct-rave-tree-policy.cpp
src/bot/: adjacent-playouts.cpp  adjacent-weighted-playouts.cpp  args_parser.cpp  attack_opponent_groups_playout.cpp  budgie.cpp  capture_weighted_playout.cpp  distributed_client.cpp  distributed_mcts.cpp  game.cpp  gtp.cpp  local-weighted-playouts.cpp  mcts-tree-policy.cpp  mcts.cpp  move_queue.cpp  pattern_db.cpp  random-playouts.cpp  save_atari_playout.cpp  serialize.cpp  uct-rave-tree-policy.cpp  uct-tree-policy.cpp
src/util/: sgf.cpp
tools/: benchmark.sh  botfighter.py  gen_playouts.sh  gen_ranks.py  runbot.sh  test_playouts.sh
